--- a/assets/post-1962.css
+++ b/assets/post-1962.css
@@ -109,7 +109,7 @@
 }
 
 .elementor-1962 .elementor-element.elementor-element-0e1593c .elementor-nav-menu--main .elementor-item.elementor-item-active {
-	color: #00FF83;
+	color: #fea505;
 }
 
 .elementor-1962 .elementor-element.elementor-element-0e1593c {
