--- a/assets/post-1962.css
+++ b/assets/post-1962.css
@@ -104,8 +104,8 @@
 .elementor-1962 .elementor-element.elementor-element-0e1593c .elementor-nav-menu--main .elementor-item.elementor-item-active,
 .elementor-1962 .elementor-element.elementor-element-0e1593c .elementor-nav-menu--main .elementor-item.highlighted,
 .elementor-1962 .elementor-element.elementor-element-0e1593c .elementor-nav-menu--main .elementor-item:focus {
-	color: #00FF83;
-	fill: #00FF83;
+	color: #fea505;
+	fill: #fea505;
 }
 
 .elementor-1962 .elementor-element.elementor-element-0e1593c .elementor-nav-menu--main .elementor-item.elementor-item-active {
